--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,15 +25,28 @@ find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
 add_executable(chippy8 ${SOURCE_FILES})
 
 # TODO: Handle other platforms
-add_custom_target (BuildNFDLib ALL
-    COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/gmake_linux_zenity/
-)
+if (UNIX)
+    add_custom_target (BuildNFDLib ALL
+        COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/gmake_linux_zenity/
+    )
+endif (UNIX)
+
+if (WIN32)
+    add_custom_target (BuildNFDLib ALL
+        COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/gmake_windows/
+    )
+endif (WIN32)
 
 # This is all *really* messy but it works!
 add_library(NFDLib STATIC IMPORTED)
 
 set_target_properties(NFDLib PROPERTIES
-    IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/lib/Release/x64/libnfd.a
+    if (UNIX)
+    	IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/lib/Release/x64/libnfd.a
+    endif (UNIX)
+    if (WIN32)
+	IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/lib/Release/x64/nfd.lib
+    endif (WIN32)
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/src/include
     INTERFACE_COMPILE_DEFINITIONS "USING_NFDLIB;NFDLIB_STATIC"
 )
