More tinkering with CMake
CMake should now work correctly on Mac OS, Windows and Linux

The Mac OS executable looks rather broken. It seems as if blitting transparent textures doesn't work as expected on metal graphics. The software renderer works correctly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,15 +25,18 @@ find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
 add_executable(chippy8 ${SOURCE_FILES})
 
 # TODO: Handle other platforms
-IF (CMAKE_SYSTEM EQUAL "Windows")
+IF (CMAKE_SYSTEM_NAME STREQUAL "Windows")
     add_custom_target (BuildNFDLib ALL
         COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/gmake_windows/
     )
-ELSEIF (CMAKE_SYSTEM EQUAL "Darwin") 
+ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "Darwin") 
     add_custom_target (BuildNFDLib ALL
         COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/gmake_macosx/
     )
     find_library(COCOA_LIBRARY Cocoa REQUIRED)
+    SET(SYSTEM_LIBS
+        ${COCOA_LIBRARY}
+    )
 ELSE ()
     add_custom_target (BuildNFDLib ALL
         COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/gmake_linux_zenity/
@@ -43,15 +46,19 @@ ENDIF()
 # This is all *really* messy but it works!
 add_library(NFDLib STATIC IMPORTED)
 
-set_target_properties(NFDLib PROPERTIES
-    IF (CMAKE_SYSTEM EQUAL "Windows") 
+IF(CMAKE_SYSTEM_NAME STREQUAL "Windows") 
+    set_target_properties(NFDLib PROPERTIES
         IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/lib/Release/x64/nfd.lib
-    ELSE()
+        INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/src/include
+        INTERFACE_COMPILE_DEFINITIONS "USING_NFDLIB;NFDLIB_STATIC"
+    )
+ELSE()
+    set_target_properties(NFDLib PROPERTIES
         IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/build/lib/Release/x64/libnfd.a
-    ENDIF()
-    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/src/include
-    INTERFACE_COMPILE_DEFINITIONS "USING_NFDLIB;NFDLIB_STATIC"
-)
+        INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/lib/nfd/src/include
+        INTERFACE_COMPILE_DEFINITIONS "USING_NFDLIB;NFDLIB_STATIC"
+    )
+ENDIF()   
 
 add_dependencies(NFDLib BuildNFDLib)
 
@@ -61,4 +68,4 @@ IF(TARGET SDL2::SDL2main)
     target_link_libraries(${PROJECT_NAME} PRIVATE SDL2main)
 ENDIF()
 
-target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2 NFDLib)
+target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2 NFDLib ${SYSTEM_LIBS})
