Updated CMake Removed tehSCREEN, and added chipperSDL to source files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,8 @@ set(SOURCE_FILES
     tehCPUS.cpp
     tehRAMS.cpp
     tehROM.cpp
-    tehSCREEN.cpp
+    chipperSDL.cpp
+
 )
 
 # 1. Look for a SDL2 package, 2. look for the SDL2 component and 3. fail if none can be found
